--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
